Minimal Build files modification to reproduce issue

--- a/java-tutorial/BUILD
+++ b/java-tutorial/BUILD
@@ -1,3 +1,5 @@
+load("@io_bazel_rules_docker//java:image.bzl", "java_image")
+
 java_binary(
     name = "ProjectRunner",
     srcs = glob(["src/main/java/com/example/ProjectRunner.java"]),
@@ -8,4 +10,11 @@ java_library(
     name = "greeter",
     srcs = ["src/main/java/com/example/Greeting.java"],
     visibility = ["//src/main/java/com/example/cmdline:__pkg__"],
+)
+
+java_image(
+    name = "RunnerDocker",
+    main_class = "com.example.ProjectRunner",
+    srcs = glob(["src/main/java/com/example/ProjectRunner.java"]),
+    deps = [":greeter"],
 )
